fix working spinner jump

--- a/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatThinkingContent.css
+++ b/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatThinkingContent.css
@@ -20,14 +20,9 @@
 	> .chat-used-context-label .monaco-button.monaco-icon-button {
 		line-height: 1.5em;
 		font-size: 13px;
-		padding-left: 1px;
 
-		.monaco-button-mdlabel {
+		.codicon, .monaco-button-mdlabel {
 			font-size: var(--vscode-chat-font-size-body-s);
-		}
-
-		.codicon {
-			font-size: 12px;
 		}
 
 		.rendered-markdown.collapsible-title-content {
